food menu was chenged

--- a/index.html
+++ b/index.html
@@ -149,10 +149,98 @@
             </div>
             <span class="arrow arrow_1"></span>
         </div>
-        <section class="menu__bar-section-1">
+        <section class="menu__bar-section" id="menuBarSection1">
             <div class="food__item-part">
                 <div class="food__item">
-                    <img src="images/jpg/food-item-biryani.jpg" class="food__item-img" alt="">
+                    <img src="images/jpg/breakfast.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Healthy Food</p>
+                            <p class="menu__para-bold">₹129</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="food__item">
+                    <img src="images/jpg/breakfast.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Healthy Food</p>
+                            <p class="menu__para-bold">₹129</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="food__item">
+                    <img src="images/jpg/breakfast.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Healthy Food</p>
+                            <p class="menu__para-bold">₹129</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="food__item">
+                    <img src="images/jpg/breakfast.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Healthy Food</p>
+                            <p class="menu__para-bold">₹129</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="food__item-part2">
+                <div class="food__item">
+                    <img src="images/jpg/breakfast.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Healthy Food</p>
+                            <p class="menu__para-bold">₹129</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="food__item">
+                    <img src="images/jpg/breakfast.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Healthy Food</p>
+                            <p class="menu__para-bold">₹129</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="food__item">
+                    <img src="images/jpg/breakfast.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Healthy Food</p>
+                            <p class="menu__para-bold">₹129</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="food__item">
+                    <img src="images/jpg/breakfast.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Healthy Food</p>
+                            <p class="menu__para-bold">₹129</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="menu__bar-section d-none" id="menuBarSection2">
+            <div class="food__item-part">
+                <div class="food__item">
+                    <img src="images/jpg/lunch.jpg" class="food__item-img" alt="">
                     <div class="food__item-content">
                         <div class="food__item-price">
                             <p class="menu__para-bold">Spicy Biryani</p>
@@ -162,7 +250,7 @@
                     </div>
                 </div>
                 <div class="food__item">
-                    <img src="images/jpg/food-item-biryani.jpg" class="food__item-img" alt="">
+                    <img src="images/jpg/lunch.jpg" class="food__item-img" alt="">
                     <div class="food__item-content">
                         <div class="food__item-price">
                             <p class="menu__para-bold">Spicy Biryani</p>
@@ -172,7 +260,7 @@
                     </div>
                 </div>
                 <div class="food__item">
-                    <img src="images/jpg/food-item-biryani.jpg" class="food__item-img" alt="">
+                    <img src="images/jpg/lunch.jpg" class="food__item-img" alt="">
                     <div class="food__item-content">
                         <div class="food__item-price">
                             <p class="menu__para-bold">Spicy Biryani</p>
@@ -182,7 +270,7 @@
                     </div>
                 </div>
                 <div class="food__item">
-                    <img src="images/jpg/food-item-biryani.jpg" class="food__item-img" alt="">
+                    <img src="images/jpg/lunch.jpg" class="food__item-img" alt="">
                     <div class="food__item-content">
                         <div class="food__item-price">
                             <p class="menu__para-bold">Spicy Biryani</p>
@@ -195,7 +283,7 @@
 
             <div class="food__item-part2">
                 <div class="food__item">
-                    <img src="images/jpg/food-item-biryani.jpg" class="food__item-img" alt="">
+                    <img src="images/jpg/lunch.jpg" class="food__item-img" alt="">
                     <div class="food__item-content">
                         <div class="food__item-price">
                             <p class="menu__para-bold">Spicy Biryani</p>
@@ -205,7 +293,7 @@
                     </div>
                 </div>
                 <div class="food__item">
-                    <img src="images/jpg/food-item-biryani.jpg" class="food__item-img" alt="">
+                    <img src="images/jpg/lunch.jpg" class="food__item-img" alt="">
                     <div class="food__item-content">
                         <div class="food__item-price">
                             <p class="menu__para-bold">Spicy Biryani</p>
@@ -215,7 +303,7 @@
                     </div>
                 </div>
                 <div class="food__item">
-                    <img src="images/jpg/food-item-biryani.jpg" class="food__item-img" alt="">
+                    <img src="images/jpg/lunch.jpg" class="food__item-img" alt="">
                     <div class="food__item-content">
                         <div class="food__item-price">
                             <p class="menu__para-bold">Spicy Biryani</p>
@@ -225,11 +313,99 @@
                     </div>
                 </div>
                 <div class="food__item">
-                    <img src="images/jpg/food-item-biryani.jpg" class="food__item-img" alt="">
+                    <img src="images/jpg/lunch.jpg" class="food__item-img" alt="">
                     <div class="food__item-content">
                         <div class="food__item-price">
                             <p class="menu__para-bold">Spicy Biryani</p>
                             <p class="menu__para-bold">₹220</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="menu__bar-section d-none" id="menuBarSection3">
+            <div class="food__item-part">
+                <div class="food__item">
+                    <img src="images/jpg/dinner.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Rice and Chicken</p>
+                            <p class="menu__para-bold">₹179</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="food__item">
+                    <img src="images/jpg/dinner.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Rice and Chicken</p>
+                            <p class="menu__para-bold">₹179</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="food__item">
+                    <img src="images/jpg/dinner.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Rice and Chicken</p>
+                            <p class="menu__para-bold">₹179</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="food__item">
+                    <img src="images/jpg/dinner.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Rice and Chicken</p>
+                            <p class="menu__para-bold">₹179</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="food__item-part2">
+                <div class="food__item">
+                    <img src="images/jpg/dinner.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Rice and Chicken</p>
+                            <p class="menu__para-bold">₹179</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="food__item">
+                    <img src="images/jpg/dinner.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Rice and Chicken</p>
+                            <p class="menu__para-bold">₹179</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="food__item">
+                    <img src="images/jpg/dinner.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Rice and Chicken</p>
+                            <p class="menu__para-bold">₹179</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="food__item">
+                    <img src="images/jpg/dinner.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Rice and Chicken</p>
+                            <p class="menu__para-bold">₹179</p>
                         </div>
                         <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
