footer section social content added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <ul class="header__links">
             <li><a class="header__link" href="#">Home</a></li>
-            <li><a class="header__link" href="#">Menu</a></li>
+            <li><a class="header__link" href="#menu">Menu</a></li>
             <li class="header__logo-list">
                 <a href="#" class="header__logo-a"><img src="images/png/memes hub icon.png" class="header__logo" alt="web logo"></a>
             </li>
@@ -116,7 +116,7 @@
         </div>
     </section>
 
-    <section class="sec_pad menu__section">
+    <section class="sec_pad menu__section" id="menu">
         <h1 class="section__heading">food menu</h1>
         <h1 class="section__tagline">Most Popular Items</h1>
         <div class="menu__bar">
@@ -331,7 +331,7 @@
                     <img src="images/jpg/dinner.jpg" class="food__item-img" alt="">
                     <div class="food__item-content">
                         <div class="food__item-price">
-                            <p class="menu__para-bold">Rice and Chicken</p>
+                            <p class="menu__para-bold">Rice with Chicken</p>
                             <p class="menu__para-bold">₹179</p>
                         </div>
                         <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
@@ -341,7 +341,7 @@
                     <img src="images/jpg/dinner.jpg" class="food__item-img" alt="">
                     <div class="food__item-content">
                         <div class="food__item-price">
-                            <p class="menu__para-bold">Rice and Chicken</p>
+                            <p class="menu__para-bold">Rice with Chicken</p>
                             <p class="menu__para-bold">₹179</p>
                         </div>
                         <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
@@ -351,7 +351,7 @@
                     <img src="images/jpg/dinner.jpg" class="food__item-img" alt="">
                     <div class="food__item-content">
                         <div class="food__item-price">
-                            <p class="menu__para-bold">Rice and Chicken</p>
+                            <p class="menu__para-bold">Rice with Chicken</p>
                             <p class="menu__para-bold">₹179</p>
                         </div>
                         <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
@@ -361,7 +361,7 @@
                     <img src="images/jpg/dinner.jpg" class="food__item-img" alt="">
                     <div class="food__item-content">
                         <div class="food__item-price">
-                            <p class="menu__para-bold">Rice and Chicken</p>
+                            <p class="menu__para-bold">Rice with Chicken</p>
                             <p class="menu__para-bold">₹179</p>
                         </div>
                         <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
@@ -374,7 +374,7 @@
                     <img src="images/jpg/dinner.jpg" class="food__item-img" alt="">
                     <div class="food__item-content">
                         <div class="food__item-price">
-                            <p class="menu__para-bold">Rice and Chicken</p>
+                            <p class="menu__para-bold">Rice with Chicken</p>
                             <p class="menu__para-bold">₹179</p>
                         </div>
                         <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
@@ -384,7 +384,7 @@
                     <img src="images/jpg/dinner.jpg" class="food__item-img" alt="">
                     <div class="food__item-content">
                         <div class="food__item-price">
-                            <p class="menu__para-bold">Rice and Chicken</p>
+                            <p class="menu__para-bold">Rice with Chicken</p>
                             <p class="menu__para-bold">₹179</p>
                         </div>
                         <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
@@ -394,7 +394,7 @@
                     <img src="images/jpg/dinner.jpg" class="food__item-img" alt="">
                     <div class="food__item-content">
                         <div class="food__item-price">
-                            <p class="menu__para-bold">Rice and Chicken</p>
+                            <p class="menu__para-bold">Rice with Chicken</p>
                             <p class="menu__para-bold">₹179</p>
                         </div>
                         <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
@@ -404,7 +404,7 @@
                     <img src="images/jpg/dinner.jpg" class="food__item-img" alt="">
                     <div class="food__item-content">
                         <div class="food__item-price">
-                            <p class="menu__para-bold">Rice and Chicken</p>
+                            <p class="menu__para-bold">Rice with Chicken</p>
                             <p class="menu__para-bold">₹179</p>
                         </div>
                         <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
@@ -413,6 +413,69 @@
             </div>
         </section>
     </section>
+
+    <footer class="footer__section">
+        <div class="main-container">
+          <div class="main-footer__upper">
+            <div class="main-footer__row-1">
+              <h2 class="section__heading footer__heading">
+                <span>Social</span>
+              </h2>
+              <div class="main-footer__social-cont">
+                <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/lalam-sai-kumar/">
+                  <img
+                    class="main-footer__icon"
+                    src="images/png/linkedin-ico.png"
+                    alt="icon"
+                  />
+                </a>
+                <a target="_blank" rel="noreferrer" href="https://github.com/SaiKumarLalam897878">
+                  <img
+                    class="main-footer__icon"
+                    src="images/png/github-ico.png"
+                    alt="icon"
+                  />
+                </a>
+                <a target="_blank" rel="noreferrer" href="https://twitter.com/saiprabhaslalam">
+                  <img
+                    class="main-footer__icon"
+                    src="images/png/twitter-ico.png"
+                    alt="icon"
+                  />
+                </a>
+                <a target="_blank" rel="noreferrer" href="https://www.youtube.com/channel/UCGO_AyPo1hCbbY6c-ZgNtqQ">
+                  <img
+                    class="main-footer__icon"
+                    src="images/png/yt-ico.png"
+                    alt="icon"
+                  />
+                </a>
+                <a target="_blank" rel="noreferrer" href="https://www.instagram.com/sai_kumar_lalam/">
+                  <img
+                    class="main-footer__icon main-footer__icon--mr-none"
+                    src="images/png/insta-ico.png"
+                    alt="icon"
+                  />
+                </a>
+              </div>
+            </div>
+            <div class="main-footer__row-2">
+              <h4 class="section__heading footer__heading">Sai kumar lalam</h4>
+              <p class="main-footer__short-desc">
+                As a Full Stack Web Developer, I have a deep understanding of 
+                web technologies to craft and deliver robust web applications
+              </p>
+            </div>
+          </div>
+  
+          <div class="main-footer__lower">
+            &copy; Copyright 2023.
+            <a rel="noreferrer" target="_blank" href="https://saikumarlalam897878.github.io/Portfolio/"
+              >Sai Kumar Lalam</a
+            >
+          </div>
+        </div>
+      </footer>
 
     <script src="memes.js"></script>
     <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d950.3245578541753!2d83.20054456956022!3d17.68336627669094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a3969f9f92763c7%3A0xe00c528d45a10411!2sMemes%20Hub%20Restaurant!5e0!3m2!1sen!2sin!4v1690983117532!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
