booking section added

--- a/index.html
+++ b/index.html
@@ -414,6 +414,38 @@
         </section>
     </section>
 
+<section class="booking__section sec_pad">
+    <div class="booking__container">
+        <div class="booking__image">
+            <img class="booking__image-img" src="images/jpg/booking.jpg" alt="">
+        </div>
+        <div class="booking__form-container">
+            <form action="#">
+                <div class="booking__form-field">
+                    <div>
+                        <input required placeholder="Enter Your Name" type="text" class="booking__form-input" name="name" id="name">
+                    </div>
+                    <div>
+                        <input required placeholder="Enter Your Mail" type="email" class="booking__form-input" name="email" id="email">
+                    </div>
+                </div>
+                <div class="booking__form-field">
+                    <div class="date">
+                        <input required placeholder="Date and Time" type="datetime-local" class="booking__form-input" name="datetime" id="datetime">
+                    </div>
+                    <div>
+                        <input required placeholder="How Many People" type="number" class="booking__form-input" name="people" id="people">
+                    </div>
+                </div>
+                <div>
+                    <textarea cols="30" rows="7" class="booking__form-input" placeholder="Special Request" name="request" id="request"></textarea>
+                </div>
+                <button type="submit" class="btn btn__large btn__warning">Book Now</button>
+            </form>
+        </div>
+    </div>
+</section>
+
     <footer class="footer__section">
         <div class="main-container">
           <div class="main-footer__upper">
@@ -462,8 +494,8 @@
             <div class="main-footer__row-2">
               <h4 class="section__heading footer__heading">Sai kumar lalam</h4>
               <p class="main-footer__short-desc">
-                As a Full Stack Web Developer, I have a deep understanding of 
-                web technologies to craft and deliver robust web applications
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Sapiente quos, corrupti ipsam possimus ex harum quis itaque.
               </p>
             </div>
           </div>
