booking section complited

--- a/index.html
+++ b/index.html
@@ -415,6 +415,8 @@
     </section>
 
 <section class="booking__section sec_pad">
+    <h1 class="section__heading">reservation</h1>
+    <h1 class="section__tagline">Book A Table Online</h1>
     <div class="booking__container">
         <div class="booking__image">
             <img class="booking__image-img" src="images/jpg/booking.jpg" alt="">
