--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta rel="icon" href="images/png/memes hub icon.png">
     <link rel="stylesheet" href="./css/memes.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css'>
 
     <script src="https://kit.fontawesome.com/506b172c7c.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +17,7 @@
     <title>Memes Hub</title>
 </head>
 <body>
-    <header class="navbar">
+    <header class="navbar_section">
         <div>
             <a href="#"><img src="images/png/memes hub icon.png" class="header__logo small__device" alt="web logo"></a>
         </div>
@@ -414,39 +415,95 @@
         </section>
     </section>
 
-<section class="booking__section sec_pad">
-    <h1 class="section__heading">reservation</h1>
-    <h1 class="section__tagline">Book A Table Online</h1>
-    <div class="booking__container">
-        <div class="booking__image">
-            <img class="booking__image-img" src="images/jpg/booking.jpg" alt="">
+    <section class="booking__section sec_pad">
+        <div class="booking__svg">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#f9c004" fill-opacity="1" d="M0,288L48,266.7C96,245,192,203,288,192C384,181,480,203,576,197.3C672,192,768,160,864,165.3C960,171,1056,213,1152,240C1248,267,1344,277,1392,282.7L1440,288L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+            </svg>
         </div>
-        <div class="booking__form-container">
-            <form action="#">
-                <div class="booking__form-field">
-                    <div>
-                        <input required placeholder="Enter Your Name" type="text" class="booking__form-input" name="name" id="name">
+        <h1 class="section__heading">reservation</h1>
+        <h1 class="section__tagline">Book A Table Online</h1>
+        <div class="booking__container">
+            <div class="booking__image">
+                <img class="booking__image-img" src="images/jpg/booking.jpg" alt="">
+            </div>
+            <div class="booking__form-container">
+                <form action="#">
+                    <div class="booking__form-field">
+                        <div>
+                            <input required placeholder="Enter Your Name" type="text" class="booking__form-input" name="name" id="name">
+                        </div>
+                        <div>
+                            <input required placeholder="Enter Your Mail" type="email" class="booking__form-input" name="email" id="email">
+                        </div>
+                    </div>
+                    <div class="booking__form-field">
+                        <div class="date">
+                            <input required placeholder="Date and Time" type="datetime-local" class="booking__form-input" name="datetime" id="datetime">
+                        </div>
+                        <div>
+                            <input required placeholder="How Many People" type="number" class="booking__form-input" name="people" id="people">
+                        </div>
                     </div>
                     <div>
-                        <input required placeholder="Enter Your Mail" type="email" class="booking__form-input" name="email" id="email">
+                        <textarea cols="30" rows="7" class="booking__form-input" placeholder="Special Request" name="request" id="request"></textarea>
                     </div>
-                </div>
-                <div class="booking__form-field">
-                    <div class="date">
-                        <input required placeholder="Date and Time" type="datetime-local" class="booking__form-input" name="datetime" id="datetime">
-                    </div>
-                    <div>
-                        <input required placeholder="How Many People" type="number" class="booking__form-input" name="people" id="people">
-                    </div>
-                </div>
-                <div>
-                    <textarea cols="30" rows="7" class="booking__form-input" placeholder="Special Request" name="request" id="request"></textarea>
-                </div>
-                <button type="submit" class="btn btn__large btn__warning">Book Now</button>
-            </form>
+                    <button type="submit" class="btn btn__large btn__warning">Book Now</button>
+                </form>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
+
+    <section class="carousel-sm sec_pad">
+        <div class="booking__svg">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+              <path fill="#000000" fill-opacity="1" d="M0,64L48,69.3C96,75,192,85,288,122.7C384,160,480,224,576,218.7C672,213,768,139,864,122.7C960,107,1056,149,1152,149.3C1248,149,1344,107,1392,85.3L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
+          </svg>
+        </div>
+        <h1 class="section__heading">testimonial</h1>
+        <h1 class="section__tagline">Our Customers Say!!!</h1>
+        <div class="blog-slider">
+          <div class="blog-slider__wrp swiper-wrapper">
+            <div class="blog-slider__item swiper-slide">
+              <div class="blog-slider__img">
+                <img src="https://res.cloudinary.com/muhammederdem/image/upload/v1535759872/kuldar-kalvik-799168-unsplash.jpg" alt="">
+              </div>
+              <div class="blog-slider__content">
+                <span class="blog-slider__code">26 December 2019</span>
+                <div class="blog-slider__title">Lorem Ipsum Dolor</div>
+                <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi? </div>
+                <button class="blog-slider__button btn btn__large">READ MORE</button>
+              </div>
+            </div>
+            <div class="blog-slider__item swiper-slide">
+              <div class="blog-slider__img">
+                <img src="https://res.cloudinary.com/muhammederdem/image/upload/v1535759871/jason-leung-798979-unsplash.jpg" alt="">
+              </div>
+              <div class="blog-slider__content">
+                <span class="blog-slider__code">26 December 2019</span>
+                <div class="blog-slider__title">Lorem Ipsum Dolor2</div>
+                <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi?</div>
+                <button class="blog-slider__button btn btn__large">READ MORE</button>
+              </div>
+            </div>
+            
+            <div class="blog-slider__item swiper-slide">
+              <div class="blog-slider__img">
+                <img src="https://res.cloudinary.com/muhammederdem/image/upload/v1535759871/alessandro-capuzzi-799180-unsplash.jpg" alt="">
+              </div>
+              <div class="blog-slider__content">
+                <span class="blog-slider__code">26 December 2019</span>
+                <div class="blog-slider__title">Lorem Ipsum Dolor</div>
+                <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi?</div>
+                <button class="blog-slider__button btn btn__large">READ MORE</button>
+              </div>
+            </div>
+            
+          </div>
+          <div class="blog-slider__pagination"></div>
+        </div>
+      </section>
+      <!-- partial -->
 
     <footer class="footer__section">
         <div class="main-container">
@@ -511,6 +568,8 @@
         </div>
       </footer>
 
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js'></script>
     <script src="memes.js"></script>
     <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d950.3245578541753!2d83.20054456956022!3d17.68336627669094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a3969f9f92763c7%3A0xe00c528d45a10411!2sMemes%20Hub%20Restaurant!5e0!3m2!1sen!2sin!4v1690983117532!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
 </body>
