services section icon animation was added

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
     <section class="sec_pad services__section">
         <div class="services">
             <div class="service__card">
-                <i class="fa-solid fa-people-group fas"></i>
+                <span class="chef__div">
+                    <i class="fa-solid fa-people-group fas chef__icon"></i>
+                </span>
                 <h1 class="primary__heading">Master Chefs</h1>
                 <p class="primary__paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Vel ut beatae architecto illum quod distinctio.
