web icon name changed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta rel="icon" href="images/png/memes hub icon.png">
+    <link rel="icon" href="images/png/memes-hub-icon.png">
     <link rel="stylesheet" href="./css/memes.css">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css'>
 
@@ -19,13 +19,13 @@
 <body>
     <header class="navbar_section">
         <div>
-            <a href="#"><img src="images/png/memes hub icon.png" class="header__logo small__device" alt="web logo"></a>
+            <a href="#"><img src="images/png/memes-hub-icon.png" class="header__logo small__device" alt="web logo"></a>
         </div>
         <ul class="header__links">
             <li><a class="header__link" href="#">Home</a></li>
             <li><a class="header__link" href="#menu">Menu</a></li>
             <li class="header__logo-list">
-                <a href="#" class="header__logo-a"><img src="images/png/memes hub icon.png" class="header__logo" alt="web logo"></a>
+                <a href="#" class="header__logo-a"><img src="images/png/memes-hub-icon.png" class="header__logo" alt="web logo"></a>
             </li>
             <li><a class="header__link" href="#about">About</a></li>
             <li><a class="header__link" href="#">Contact</a></li>
@@ -37,7 +37,7 @@
 
     <section class="home__section">
         <div class="home__logo">
-            <img src="images/png/memes hub icon.png" alt="web logo">
+            <img src="images/png/memes-hub-icon.png" alt="web logo">
             <p>Taste Like Never Before</p>
             <div class="btn__group">
                 <button class="btn btn__large btn__warning">book a table</button>
@@ -483,7 +483,7 @@
               </div>
               <div class="blog-slider__content">
                 <span class="blog-slider__code">26 December 2019</span>
-                <div class="blog-slider__title">Lorem Ipsum Dolor2</div>
+                <div class="blog-slider__title">Lorem Ipsum Dolor</div>
                 <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi?</div>
                 <button class="blog-slider__button btn btn__large">READ MORE</button>
               </div>
@@ -505,7 +505,6 @@
           <div class="blog-slider__pagination"></div>
         </div>
       </section>
-      <!-- partial -->
 
     <footer class="footer__section">
         <div class="main-container">
