booking section time formated

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
           </div>
           <div class="blog-slider__pagination"></div>
         </div>
-      </section>
+    </section>
 
     <footer class="footer__section">
         <div class="main-container">
@@ -563,11 +563,11 @@
           <div class="main-footer__lower">
             &copy; Copyright 2023.
             <a rel="noreferrer" target="_blank" href="https://saikumarlalam897878.github.io/Portfolio/"
-              >Sai Kumar Lalam</a
-            >
+              >Sai Kumar Lalam
+            </a>
           </div>
         </div>
-      </footer>
+    </footer>
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js'></script>
